scripts/kubernetes/apps/devops/k8s-cluster-resources/base/external_svc_gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-gitlab
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8088
  - name: ssh
    protocol: TCP
    port: 22
    targetPort: 8089
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-gitlab
  labels:
    kubernetes.io/service-name: external-gitlab
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8088
  - name: ssh
    appProtocol: ssh
    protocol: TCP
    port: 8089
endpoints:
  - addresses:
      - "192.168.201.83"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-gitlab
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: multi-protocol-gateway
    sectionName: https-zoo-svc-wildcard
  hostnames:
  - "gitlab.svc.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''	
      kind: Service
      name: external-gitlab
      port: 80
      weight: 1
---
apiVersion: v1
kind: Service
metadata:
  name: external-gitlab-pages
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8088
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-gitlab-pages
  labels:
    kubernetes.io/service-name: external-gitlab-pages
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8088
endpoints:
  - addresses:
      - "192.168.201.83"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-gitlab-pages
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: multi-protocol-gateway
    sectionName: https-zoo-svc-gitlab-pages-wildcard
  hostnames:
  - "*.gitlab-pages.svc.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: external-gitlab-pages
      port: 80
      weight: 1
