scripts/kubernetes/apps/devops/k8s-cluster-resources/base/external_svc_kroki.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-kroki
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8191
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-kroki
  labels:
    kubernetes.io/service-name: external-kroki
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8191
endpoints:
  - addresses:
      - "192.168.201.83"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-kroki
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway
    name: multi-protocol-gateway
    sectionName: https-zoo-svc-wildcard
  hostnames:
  - "kroki.svc.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''	
      kind: Service
      name: external-kroki
      port: 80
      weight: 1
